--- a/package.json
+++ b/package.json
@@ -2,15 +2,20 @@
   "name": "interactive_square_app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Andrey0295.github.io/interactive_square_app",
   "dependencies": {
     "axios": "^0.23.0",
     "cra-template": "1.1.2",
+    "gh-pages": "^3.2.3",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
